docs/7.57/md/abenabap_json_trafo_id.md
---
title: "JSON - Identity Transformation"
description: |
  The predefined identity transformation(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xslt_id.htm) ID is executed internally so that all requirements for JSON transformations(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json_trafos.htm) are met. The fo
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json_trafo_id.htm"
abapFile: "abenabap_json_trafo_id.htm"
keywords: ["do", "if", "try", "data", "abenabap", "json", "trafo"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_communication.htm) →  [ABAP and JSON](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json.htm) →  [JSON - Transformations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json_trafos.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: JSON - Identity Transformation, ABENABAP_JSON_TRAFO_ID, 757%0D%0A%0D%0AError:%0D%0A%0
D%0A%0D%0A%0D%0ASuggestion for improvement:)

JSON - Identity Transformation

The predefined [identity transformation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xslt_id.htm) ID is executed internally so that all requirements for [JSON transformations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json_trafos.htm) are met. The following combinations are possible:

-   [JSON writer](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenjson_writer_glosry.htm "Glossary Entry") as XML target
    -   ABAP data objects as source
        
        The ABAP data is serialized directly to its canonical JSON format [asJSON](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasjson_glosry.htm "Glossary Entry"). In this concept, the ABAP data is serialized first to its canonical XML format [asXML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_glosry.htm "Glossary Entry"). This is then transformed to an [asJSON-XML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasjson_xml_glosry.htm "Glossary Entry") representation and passed to the writer.
        
    -   XML data as XML source
        
        The XML source must be in JSON-XML format and is passed to the writer directly.
        
    -   JSON data or JSON reader as XML source
        
        The JSON-XML data is passed to the writer directly.
        
-   JSON data or [JSON reader](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenjson_reader_glosry.htm "Glossary Entry") as XML source
    -   ABAP data objects as target
        
        The JSON data must be in an [asJSON](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasjson_glosry.htm "Glossary Entry") format that matches the ABAP data objects. The JSON data is deserialized directly to the ABAP data objects. Conceptually, an asJSON-XML representation of the asJSON data is processed that is first transformed to asXML and then deserialized to the ABAP data objects.
        
    -   XML data as XML target
        
        The JSON-XML data is passed to the XML target directly.
        
    -   JSON writer as XML target
        
        The JSON-XML data is passed to the writer directly.
        

When XML data is specified as an XML source or XML target, this covers all data that can be specified behind XML in CALL TRANSFORMATION, except for JSON data and JSON readers and writers.

Hints

-   If the identity transformation ID is used to serialize ABAP data to JSON and deserialize JSON data to ABAP, [asJSON, the canonical JSON representation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_asjson.htm) of ABAP data, is applied.
-   Copies of the XSL transformation ID made from the repository to other XSLT programs are not handled like ID internally and cannot be used like ID for JSON data.

Executable Examples

-   See [Identity Transformation with JSON Writer as Target](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenjson_trafo_id_abexa.htm) for the various ways of specifying JSON data as an XML source.
-   See the [asJSON](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_asjson.htm) examples.